--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,96 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+  
+#skill-list2{
+  padding-bottom: 15%;
+}
+#skill-title{
+  font-weight: bolder;
+}
+#skill-list1{
+  display: grid;
+  width: 50%;
+  align-items: center;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+#skills{
+  width: auto;
+  display: grid;
+  justify-content: center;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+#icons{
+  margin-right: 30px;
+  padding: 10;
+  height: 70px;
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+#minha-foto{
+  height: 10%;
+  
+  padding-left: 90%;
+  width: 100%;
+
+}
+#nav-bar {
+  width: 100%;
+  width: 100%;
+  height: 100%;
+  
+  position: fixed;
+  
+  
+
+}
+li {
+  margin: 2%;
+  
+}
+#nav-list {
+  display: flex;
+  
+}
+
+#home {
+  
+  padding-top: 5%;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  
+  position: relative;
+  
+}
+#intro{
+  width: 50%;
+}
+
+#nome {
+  
+  color: black;
+  font-size: 50px;
+
+}
+#profissão{
+  font-weight: bold;
+  font-size: 50px;
+  padding-left: 5%;
+  padding-bottom: 5%;
+}
+#habilidades-text {
+  font-size: 45px;
+  font-weight: bold;
+}
+#habilidades-div{
+  
+  margin: 10%;
+  display: grid;
+  justify-content: center;
+  margin-top: 10%;
+  color: black;
+  
+ 
+}
+p {
+  font-size: large;
 }
