--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,80 @@
 @import "tailwindcss";
+#used-tools{
+  display: flex;
+}
+#projects-list{
+    padding-top: 8%;
+    display: flex;
+    justify-content: center;
+    
+    
+  }
 
+.project-img {
+  width: 300px;
+  height: 250px;
+  margin: 1rem auto;
+  perspective: 1000px;
+  margin: 1rem auto;
+}
+
+.project-img-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+}
+
+.project-img:hover .project-img-inner {
+  transform: rotateY(180deg);
+}
+
+.img-front,
+.img-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.5rem;
+}
+
+.img-front {
+  background: white;
+  border: 1px solid #e5e7eb;
+}
+
+.img-back {
+  background: #f3f3f3;
+  transform: rotateY(180deg);
+}
+
+
+#project-item{
+  width: 50%;
   
+  border-color: black;
+  display: flex;
+  justify-content: center;
+  
+  
+}
+#projects-div{
+  
+  padding-top: 10%;
+  display: grid;
+  justify-content: center;
+  position: relative;
+}
+
+#projects-title{
+  font-size: 250%;
+  font-weight: bold;
+}
+
 #skill-list2{
   padding-bottom: 15%;
 }
@@ -26,21 +100,19 @@
 }
 
 #minha-foto{
-  height: 10%;
-  
+  height: auto;
+  position: absolute;
+  padding-top: 10%;
   padding-left: 90%;
-  width: 100%;
+  max-width: auto;
+  
 
 }
 #nav-bar {
+  z-index: 1;
   width: 100%;
-  width: 100%;
-  height: 100%;
-  
   position: fixed;
-  
-  
-
+  background-color: white;
 }
 li {
   margin: 2%;
@@ -52,7 +124,6 @@ li {
 }
 
 #home {
-  
   padding-top: 5%;
   align-items: center;
   display: flex;
@@ -62,20 +133,40 @@ li {
   
 }
 #intro{
+  position: relative;
   width: 50%;
 }
 
 #nome {
-  
+  padding-top: 5%;
   color: black;
   font-size: 50px;
 
 }
+
 #profissão{
   font-weight: bold;
-  font-size: 50px;
+  font-size: 45px;
   padding-left: 5%;
   padding-bottom: 5%;
+  overflow: hidden;
+  border-right: .15em solid black;
+  white-space: nowrap;
+  margin: 0 auto;
+  letter-spacing: .15em;
+  animation: 
+  typing 3.5s steps(40, end),
+  blink-caret .75s step-end infinite;
+  ;
+}
+
+@keyframes typing {
+  from {width: 0;}
+  to {width: 100%;}
+}
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: black; }
 }
 #habilidades-text {
   font-size: 45px;
@@ -93,4 +184,39 @@ li {
 }
 p {
   font-size: large;
+}
+
+@media (max-width:600px)
+{
+  #projects-list{
+    padding-top: 8%;
+    display: flex;
+    justify-content: center;
+  }
+  #profissão{
+    font-size: 18px;
+    padding-left: 0%;
+    padding-right: 10%;
+    letter-spacing: .10em;
+  }
+  #nome{
+    font-size: 30px;
+  }
+}
+
+
+@media (min-width:600px) { /* hi-res laptops and desktops */ 
+ 
+
+  #profissão{
+    font-size: 25px;
+  }
+ 
+}
+
+@media only screen and (min-width: 1200px) {
+  #profissão{
+    font-size: 45px;
+  }
+
 }
