--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@
     padding-top: 8%;
     display: flex;
     justify-content: center;
-    
+   
     
   }
 
@@ -32,11 +32,14 @@
 
 .img-front,
 .img-back {
+  padding: 15;
+  border-width: 2px;
+  border-color: black;
   position: absolute;
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
-  display: flex;
+  display: grid;
   align-items: center;
   justify-content: center;
   border-radius: 0.5rem;
@@ -111,6 +114,7 @@
 #nav-bar {
   z-index: 1;
   width: 100%;
+  height: 60px;
   position: fixed;
   background-color: white;
 }
@@ -219,4 +223,34 @@ p {
     font-size: 45px;
   }
 
+}
+
+.code-link{
+  border-radius: 5px;
+  padding: 5;
+  width: 50%;
+  border-width: 2px;
+
+}
+.contact-intro{
+  margin-top: 5%;
+  background-color: black;
+  color: white;
+  display: grid;
+  justify-content: center;
+}
+.contact-intro-text{
+  padding-top: 15%;
+  font-weight: bold;
+  font-size: 45px;
+}
+.contact-div{
+  padding-top: 10%;
+  display: flex;
+  justify-content: center;
+}
+.contact-list{
+  padding-left: 8%;
+  display: grid;
+  justify-content: center;
 }
