--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,75 +2,30 @@
 #used-tools{
   display: flex;
 }
-#projects-list{
-    padding-top: 8%;
+
+
+.projects-list{
+   
     display: flex;
     justify-content: center;
-   
-    
   }
 
-.project-img {
-  width: 300px;
-  height: 250px;
-  margin: 1rem auto;
-  perspective: 1000px;
-  margin: 1rem auto;
-}
 
-.project-img-inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  transition: transform 0.6s;
-  transform-style: preserve-3d;
-}
-
-.project-img:hover .project-img-inner {
-  transform: rotateY(180deg);
-}
-
-.img-front,
-.img-back {
-  padding: 15;
-  border-width: 2px;
-  border-color: black;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
+#projects-div{
+ 
+  padding-top: 10%;
   display: grid;
-  align-items: center;
   justify-content: center;
-  border-radius: 0.5rem;
+  position: relative;
 }
-
-.img-front {
-  background: white;
-  border: 1px solid #e5e7eb;
-}
-
-.img-back {
-  background: #f3f3f3;
-  transform: rotateY(180deg);
-}
-
-
-#project-item{
-  width: 50%;
+.project-item{
   
+  width: 50%;
   border-color: black;
   display: flex;
   justify-content: center;
   
   
-}
-#projects-div{
-  
-  padding-top: 10%;
-  display: grid;
-  justify-content: center;
-  position: relative;
 }
 
 #projects-title{
@@ -102,21 +57,28 @@
   height: 70px;
 }
 
-#minha-foto{
-  height: auto;
-  position: absolute;
+.pic_div{
   padding-top: 10%;
-  padding-left: 90%;
-  max-width: auto;
-  
+  display: flex;
+  justify-content: center;
+ 
+  height: 40% 
 
 }
-#nav-bar {
-  z-index: 1;
-  width: 100%;
+
+#minha-foto{
   
-  position: fixed;
+  height: 100%;
+  width: 10%;
+  border-radius: 100%;
+}
+#nav-bar {
+  z-index: 2;
+  width: 100%;
   background-color: white;
+  height: fit-content;
+  color: black;
+  position: fixed;
 }
 li {
   margin: 2%;
@@ -124,11 +86,11 @@ li {
 }
 #nav-list {
   display: flex;
-  
+  justify-content: end;
 }
 
 #home {
-  padding-top: 5%;
+  
   align-items: center;
   display: flex;
   justify-content: center;
@@ -177,9 +139,8 @@ li {
   font-weight: bold;
 }
 #habilidades-div{
-  
-  margin: 10%;
   display: grid;
+  margin: 10%;
   justify-content: center;
   margin-top: 10%;
   color: black;
@@ -190,48 +151,6 @@ p {
   font-size: large;
 }
 
-@media (max-width:600px)
-{
-  #projects-list{
-    padding-top: 8%;
-    display: flex;
-    justify-content: center;
-  }
-  #profissão{
-    font-size: 18px;
-    padding-left: 0%;
-    padding-right: 10%;
-    letter-spacing: .10em;
-  }
-  #nome{
-    font-size: 30px;
-  }
-}
-
-
-@media (min-width:600px) { /* hi-res laptops and desktops */ 
- 
-
-  #profissão{
-    font-size: 25px;
-  }
- 
-}
-
-@media only screen and (min-width: 1200px) {
-  #profissão{
-    font-size: 45px;
-  }
-
-}
-
-.code-link{
-  border-radius: 5px;
-  padding: 5;
-  width: 50%;
-  border-width: 2px;
-
-}
 .contact-intro{
   margin-top: 5%;
   background-color: black;
@@ -240,9 +159,9 @@ p {
   justify-content: center;
 }
 .contact-intro-text{
-  padding-top: 15%;
+  padding-top: 5%;
   font-weight: bold;
-  font-size: 45px;
+  font-size: 30px;
 }
 .contact-div{
   padding-top: 10%;
@@ -253,4 +172,53 @@ p {
   padding-left: 8%;
   display: grid;
   justify-content: center;
+}
+
+@media (max-width:600px)
+{
+
+  #profissão{
+    font-size: 18px;
+    padding-left: 0%;
+    padding-right: 10%;
+    letter-spacing: .10em;
+  }
+  #nome{
+    font-size: 30px;
+  }
+ 
+  .contact-div{
+  display: grid;
+  }
+  .contact-list{
+    padding-top: 5%;
+  }
+
+}
+
+
+@media (min-width:600px) { /* hi-res laptops and desktops */ 
+
+  #profissão{
+    font-size: 25px;
+  }
+  
+ 
+}
+
+@media only screen and (min-width: 1200px) {
+  #profissão{
+    font-size: 45px;
+  }
+
+}
+
+
+
+.code-link{
+  border-radius: 5px;
+  padding: 5;
+  width: 50%;
+  border-width: 2px;
+
 }
